# ai_agent_hugging_face_course

./: README.md  main.py  pyproject.toml
src/: unit1.ipynb  unit2_agent_code.ipynb  unit2_agent_tool_calling.ipynb  unit2_multi_agents.ipynb
src/agentic_rag/: complete_agent.py  retriever.py
src/langgraph/: unit2_3_doc_langgraph.ipynb  unit2_3_first_langgraph.ipynb
src/llamaindex/: unit2_2_llamaindex_agents.ipynb  unit2_2_llamaindex_basics.ipynb  unit2_2_llamaindex_components.ipynb  unit2_2_llamaindex_tools.ipynb
src/llamaindex/alfred_chroma_db/: chroma.sqlite3
src/smolagent/: unit1_smolagent.ipynb  unit2_agent_rag.ipynb  unit2_multi_agents.ipynb  vision_web_browser.py
